docs(swagger): remove scheme from label and regen (#249)
